# mc-auto-mod-downloader

./: .dockerignore  Dockerfile  Makefile  action.yml  mods.txt  pyproject.toml  run.sh
.github/workflows/: test.yml
src/: main.py
src/downloader/: fetcher.py  fileloader.py  main.py
test/: test_fetcher.py  test_fileloader.py
