[project]
name = "mc-auto-mod-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "certifi>=2025.1.31",
    "pytest-asyncio>=0.25.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
